# college_basketball_local_mu_sig

./: .gitignore  Dockerfile  Makefile  README.md  daily_data_update.py  get_boxscores.py  hard_rock_converter.py  input_data.py  lambda.ini  more_stats.py  optuna_best_cls.json  optuna_best_reg.json  optuna_best_reg_old.json  predict_games.py  pyproject.toml  requirements.txt  streamlit_app.py  test_test.py  to_datetime.py  update_all_data.py
.github/workflows/: ci.yml
bball/: cli.py
bball/.ipynb_checkpoints/: cli-checkpoint.py
bball/data/: augment.py  dataset.py  get_boxscores.py  loaders.py
bball/evaluation/: metrics.py
bball/models/: analyze_data_pytorch.py  architecture.py  infer.py  trainer.py  tuner.py
notes/: session-summary-2026-01-21_17-24-09.txt  session-summary-2026-01-21_18-49-47.txt
predictions/json/: final_scores_2025-11-03.json  final_scores_2025-11-04.json  final_scores_2025-11-05.json  final_scores_2025-11-06.json  final_scores_2025-11-07.json  final_scores_2025-11-08.json  final_scores_2025-11-09.json  final_scores_2025-11-10.json  final_scores_2025-11-11.json  final_scores_2025-11-12.json  final_scores_2025-11-13.json  final_scores_2025-11-14.json  final_scores_2025-11-15.json  final_scores_2025-11-16.json  final_scores_2025-11-17.json  final_scores_2025-11-18.json  (+230 more)
scripts/: backfill_lines.py  backfill_s3_lines.py  bart_finals_to_json.py  csv_to_json.py  publish_daily.sh
site/: README.md  package-lock.json  package.json  part-189bf491.json  part-44136fa3.json  tsconfig.tsbuildinfo
tests/: test_inference.py  test_loader.py
(+255 files in other folders)
